# RustInfer

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPERS.md  DEVELOPERS_ZH.md  DEVELOPMENT.md  QUICKSTART_SCHEDULER.md  README.md  my_profile_report.nsys-rep  readme.md  scheduler-config.example.yaml  test_spawner.sh  update.md
crates/infer-core/: Cargo.toml  README.md  build.rs
crates/infer-core/src/: lib.rs
crates/infer-core/src/base/: allocator.rs  buffer.rs  error.rs  mod.rs
crates/infer-core/src/cuda/: config.rs  device.rs  error.rs  mod.rs  wrapper.h
crates/infer-core/src/model/: config.rs  llama3.rs  mod.rs  qwen3.rs  safetensor_loader.rs  tokenizer.rs
crates/infer-core/src/model/common/: config.rs  mod.rs  tokenizer.rs
crates/infer-core/src/model/runtime/: inference_state.rs  kv_cache.rs
crates/infer-core/src/op/: add.rs  add_inplace.rs  embedding.rs  encode.rs  flash_gqa.rs  matmul.rs  mod.rs  rmsnorm.rs  rope.rs  sampler.rs  scatter.rs  swiglu.rs
crates/infer-core/src/op/kernels/: mod.rs
crates/infer-core/src/op/kernels/cpu/: add.rs  argmax.rs  embedding.rs  flash_attn_gqa.rs  matmul.rs  mod.rs  rmsnorm.rs  rope.rs  swiglu.rs
crates/infer-core/src/op/kernels/cpu/fused_add_rmsnorm/: mod.rs
crates/infer-core/src/op/kernels/cuda/: mod.rs  total_head.h
crates/infer-core/src/op/kernels/cuda/add/: add.cu  add.h  mod.rs
crates/infer-core/src/op/kernels/cuda/awq_gemm/: awq_gemm.cu  mod.rs
crates/infer-core/src/op/kernels/cuda/embedding/: emb.cu  emb.h  mod.rs
crates/infer-core/src/op/kernels/cuda/flash_attn_gqa/: flash_attn_gqa.cu  flash_attn_gqa.h  flash_attn_gqa_bf16.cu  flash_attn_gqa_bf16_hdim128.cu  flash_attn_gqa_fp16.cu  flash_decoding.cu  flash_decoding_bf16.cu  flash_decoding_bf16_hdim128.cu  mod.rs
crates/infer-core/src/op/kernels/cuda/fused_add_rmsnorm/: fused_add_rmsnorm.cu  mod.rs
crates/infer-core/src/runtime/: inference_state.rs  kv_cache.rs  mod.rs
crates/infer-core/src/tensor/: mod.rs
crates/infer-engine/: Cargo.toml
crates/infer-engine/src/: engine.rs  main.rs  scheduler.rs  zmq_server.rs
crates/infer-frontend/: AGENT.md  Cargo.toml  DESIGN.md  Dioxus.toml  README.md  README_CN.md  README_ZH.md  dev.sh  package-lock.json  package.json
crates/infer-frontend/assets/: main.css  output.css
crates/infer-frontend/public/: katex-init.js  mermaid-init.js
crates/infer-frontend/src/: main.rs
crates/infer-frontend/src/api/: client.rs
crates/infer-frontend/src/components/: admin_console.rs  chat_interface.rs  code_block.rs  mermaid_diagram.rs  message_bubble.rs  metrics_panel.rs  mod.rs  streaming_indicator.rs  streaming_message.rs
crates/infer-frontend/src/state/: conversation.rs  metrics.rs  mod.rs
crates/infer-frontend/src/utils/: markdown.rs
crates/infer-scheduler/: Cargo.toml  DESIGN.md  README.md  README_ZH.md
crates/infer-scheduler/src/: batch_builder.rs  config.rs  coordinator.rs  engine.rs  lib.rs  main.rs  state.rs
crates/infer-scheduler/src/memory/: allocator.rs  block_table.rs  eviction.rs  mod.rs  radix_tree.rs
crates/infer-scheduler/src/policy/: batch_plan.rs  continuous.rs  mod.rs
crates/infer-scheduler/src/transport/: api_frontend.rs  mod.rs  worker_proxy.rs  zmq_frontend.rs
crates/infer-server/: Cargo.toml  DESIGN.md  QUICKSTART.md  README.md  README_CN.md  README_ZH.md
crates/infer-server/src/: config.rs  lib.rs  main.rs  state.rs  zmq_client.rs
crates/infer-server/src/api/: health.rs  metrics.rs  mod.rs  openai.rs
crates/infer-server/src/backend/: mod.rs  zmq_client.rs
crates/infer-server/src/chat/: mod.rs  template.rs
crates/infer-server/src/config/: server.rs
crates/infer-server/src/http/: handler.rs  mod.rs  request.rs  response.rs
crates/infer-server/src/inference/: engine.rs  mod.rs
crates/infer-server/src/processor/: mod.rs  tokenizer.rs
crates/infer-worker/: Cargo.toml  DESIGN.md  build.rs  exploration_summary.md
crates/infer-worker/src/: lib.rs
crates/infer-worker/src/base/: allocator.rs  buffer.rs  error.rs  mod.rs
crates/infer-worker/src/comm/: backend.rs  mod.rs  nccl.rs
crates/infer-worker/src/cuda/: config.rs  error.rs  ffi.rs  mod.rs  thread_stream.rs  wrapper.h
crates/infer-worker/src/model/: config.rs  factory.rs  kvcache.rs  llama3.rs  mod.rs  registry.rs
crates/infer-worker/src/model/architectures/: llama3.rs  mod.rs
crates/infer-worker/src/model/diffusion/: buffer.rs  diffusers_loader.rs  mod.rs  pipeline.rs  scheduler.rs
crates/infer-worker/src/model/diffusion/vae/: decoder.rs  mod.rs  state.rs
crates/infer-worker/src/model/diffusion/z_image/: dit_block.rs  mod.rs  patchify.rs  pipeline.rs  rope_embedder_3d.rs  state.rs  text_encoder.rs  timestep_embedder.rs  transformer.rs
crates/infer-worker/src/model/layers/: decoder_layers.rs  mod.rs  weight_mapping.rs
crates/infer-worker/src/model/llm/: llama3.rs  mod.rs  qwen3.rs
crates/infer-worker/src/model/loader/: mod.rs  model_loader.rs  registry.rs
crates/infer-worker/src/op/: add.rs  add_inplace.rs  attn_backend.rs  broadcast_mul.rs  conv2d.rs  embedding.rs  flash_gqa.rs  fused_add_rmsnorm.rs  groupnorm.rs  layernorm.rs  matmul.rs  mod.rs  rmsnorm.rs  rope.rs  sampler.rs  scalar.rs  scatter.rs  sdpa.rs  softmax.rs  split_cols.rs  swiglu.rs  tensor_utils.rs  upsample.rs
crates/infer-worker/src/op/kernels/: mod.rs
crates/infer-worker/src/op/kernels/cpu/: argmax.rs  broadcast_mul.rs  cast.rs  conv2d.rs  flash_attn_gqa.rs  groupnorm.rs  layernorm.rs  matmul.rs  mod.rs  rmsnorm.rs  rope.rs  scalar.rs  scatter.rs  softmax.rs  split_cols.rs  upsample.rs
crates/infer-worker/src/op/kernels/cuda/: mod.rs  total_head.h
crates/infer-worker/src/spawner/: config.rs  design.md  device.rs  logger.rs  mod.rs  process_manager.rs  spawner.rs  tui.rs
crates/infer-worker/src/tensor/: mod.rs
crates/infer-worker/src/worker/: config.rs  control_plane.rs  device_info.rs  mod.rs  server.rs  state_machine.rs  worker.rs
crates/infer-worker/src/worker/handlers/: forward_handler.rs  init_kv_handler.rs  load_model_handler.rs  mod.rs  profile_handler.rs  register_handler.rs  unload_handler.rs
(+115 files in other folders)
