[workspace]
members = [
    "crates/infer-core",
    "crates/infer-server",
    "crates/infer-frontend",
    "crates/infer-protocol",  # 新增: 通信协议
    "crates/infer-engine"     # 新增: 推理引擎进程
]
resolver = "3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
