[workspace]
members = [
    "crates/infer-worker",
    "crates/infer-server",
    "crates/infer-frontend",
    "crates/infer-protocol",
    "crates/infer-scheduler"
]
resolver = "3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
