[package]
name = "infer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dashmap = "6.1.0"
half = { version = "2.7.1", features = ["std","num-traits"] }
libc = "0.2.177"
memmap2 = "0.9.9"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
num-traits = "0.2.19"
once_cell = "1.21.3"
rayon = "1.11.0"
safetensors = "0.6.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokenizers = "0.22.1"

[build-dependencies]
cc = { version = "1.2.43", features = ["parallel"] , optional = true }
bindgen = { version ="0.72.1", optional = true }
walkdir = {version = "2.5.0" , optional = true}
[dev-dependencies]
rand = "0.9.2"
[features]
default = ["cuda"]
cuda = ["dep:cc", "dep:bindgen", "dep:walkdir"]
qwen3 = []
