[package]
name = "infer-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustinfer-engine"
path = "src/main.rs"

[dependencies]
infer-core = { path = "../infer-core" }
infer-protocol = { path = "../infer-protocol" }

tokio = { version = "1.49", features = ["full"] }
zmq = "0.10"
rmp-serde = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }

[features]
default = []
cuda = ["infer-core/cuda"]
