[package]
name = "infer-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustinfer-frontend"
path = "src/main.rs"

[dependencies]
# Dioxus web
dioxus = { version = "0.7.2", features = ["web", "signals"] }
dioxus-web = "0.7.2"

# HTTP client (WASM-compatible)
reqwest = { version = "0.13", features = ["json"] }
gloo-net = { version = "0.6", features = ["eventsource"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.19", features = ["v4", "serde", "js"] }

# Markdown rendering
comrak = "0.49"

# Syntax highlighting
syntect = "5.3"

# Web APIs
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.85"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
