[package]
name = "infer-scheduler"
version = "0.1.0"
edition = "2024"

[lib]
name = "infer_scheduler"
path = "src/lib.rs"

[[bin]]
name = "rustinfer-scheduler"
path = "src/main.rs"

[dependencies]
infer-worker = { path = "../infer-worker" }
infer-protocol = { path = "../infer-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.49", features = ["full"] }
zmq = "0.10"
zeromq = "0.4"
bincode = "1.3"
rmp-serde = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }
ordered-float = "5.1"
num_cpus = "1.17.0"

[features]
default = []
cuda = ["infer-worker/cuda"]
