[package]
name = "infer-scheduler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustinfer-scheduler"
path = "src/main.rs"

[dependencies]
infer-worker = { path = "../infer-worker" }
infer-protocol = { path = "../infer-protocol" }

tokio = { version = "1.49", features = ["full"] }
zmq = "0.10"
rmp-serde = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }

[features]
default = []
cuda = ["infer-worker/cuda"]
