[package]
name = "infer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# 协议定义
infer-protocol = { path = "../infer-protocol" }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# HTTP 服务器
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ZeroMQ
zeromq = "0.4"

# Tokenizer
tokenizers = "0.20"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步流
async-stream = "0.3"
futures = "0.3"

# 配置
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# MessagePack serialization
rmp-serde = "1.3"

# ZeroMQ (synchronous)
zmq = "0.10"

[[bin]]
name = "infer-server"
path = "src/main.rs"
