[package]
name = "infer-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dashmap = "6.1.0"
half = { version = "2.7.1", features = ["std","num-traits"] }
libc = "0.2.180"
memmap2 = "0.9.9"
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }
num-traits = "0.2.19"
once_cell = "1.21.3"
rayon = "1.11.0"
safetensors = "0.7.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokenizers = "0.22.2"

# Server dependencies (optional)
zeromq = { version = "0.4", optional = true }
bincode = { version = "1.3", optional = true }
tokio = { version = "1.43", features = ["full"]}
clap = { version = "4.5", features = ["derive"], optional = true }

# Protocol dependency
infer-protocol = { path = "../infer-protocol", optional = true }

[build-dependencies]
cc = { version = "1.2.52", features = ["parallel"] , optional = true }
bindgen = { version ="0.72.1", optional = true }
walkdir = {version = "2.5.0" , optional = true}

[dev-dependencies]
rand = "0.9.2"
tempfile = "3.16"

[features]
default = ["cuda","server"]
protocol = ["dep:infer-protocol"]
server = ["protocol", "dep:zeromq", "dep:bincode", "dep:clap"]
cuda = ["dep:cc", "dep:bindgen", "dep:walkdir"]

[[bin]]
name = "infer-worker"
path = "src/bin/worker_main.rs"
required-features = ["server"]

[[bin]]
name = "infer-spawner"
path = "src/bin/spawner_main.rs"
required-features = ["server"]
